[package]
name = "cannelloni-rust"
description = "WIP port of the cannelloni C++ CAN tunnel software to Rust."
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["Janosch Reppnow <janoschre@gmail.com>"]

[dependencies]
socketcan = "1.7.0"
async-io = "1.7.0"
libc = "0.2.137"
futures = "0.3.25"
bytes = "1.3.0"