[package]
name = "cannelloni-rust"
description = "WIP port of the cannelloni C++ CAN tunnel software to Rust."
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["Janosch Reppnow <janoschre@gmail.com>"]

[dependencies]
socketcan = "2.0"
async-io = "1.7.0"
libc = "0.2.137"
futures = "0.3.25"
bytes = "1.3.0"
smol = "^1.3.0"
clap = { version = "^4.0.29", features = ["derive"] }
anyhow = "^1.0.66"

[features]
# enable test cases using vlan, disabled by default
vcan_testing = []
